[package]
name = "file-image-converter-impl"
version = "0.1.0"
authors = ["dqmino <dominoisadev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.30.0", features = ["default", "__screenshot"] }
egui_extras = { version = "0.30.0", features = ["default", "image"] }
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
file-image-converter = { path = "../file-image-converter" }
rfd = "0.15.1"